@@ -566,6 +566,7 @@ If you wish to accept our invitation and confirm your registration in &lt;b&gt;%
 			<label index="internal_invalid_token">Apparently this link has expired.</label>
 			<label index="internal_init_language">Internal error of the language packs.</label>
 			<label index="internal_no_template">The template file "%s" has not been found. Check your template setup about %s.</label>
+			<label index="internal_table_without_TCA">The table "%s" is not defined in TCA.</label>
 		</languageKey>
 	</data>
 </T3locallang>
